@@ -123,6 +123,11 @@
       <DependentUpon>OfflineLogForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -161,6 +166,10 @@
     <EmbeddedResource Include="OfflineLogForm.resx">
       <DependentUpon>OfflineLogForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -171,6 +180,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GarminCommunicator.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rotateleft.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rotateright.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
